@@ -1,6 +1,6 @@
 package io.quarkus.vault.runtime.config;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.eclipse.microprofile.config.spi.ConfigSource;
 import org.eclipse.microprofile.config.spi.ConfigSourceProvider;
@@ -18,6 +18,6 @@ public class VaultConfigSourceProvider implements ConfigSourceProvider {
 
     @Override
     public Iterable<ConfigSource> getConfigSources(ClassLoader forClassLoader) {
-        return Arrays.asList(new VaultConfigSource(vaultBootstrapConfig));
+        return List.of(new VaultConfigSource(vaultBootstrapConfig));
     }
 }
